[gd_scene load_steps=2 format=3 uid="uid://qw146u0esirf"]

[ext_resource type="Script" uid="uid://bdyfdo2douekw" path="res://scripts/weapon.gd" id="1_6k0uy"]

[node name="Weapon" type="Node2D"]
script = ExtResource("1_6k0uy")

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.35

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
